# cricli

./: Cargo.toml  README.md
src/: .main.rs.swp  main.rs
