[package]
name = "cricli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full", "tracing"] }
tonic = { version = "0.11", features = ["tls"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "local-time"] }
thiserror = "1"

tokio-stream = { version="0.1", features=["net"] }
futures="0.3"
prost = "0.12"
prost-types = "0.12"
prost-build = "0.12"
async-trait = "0.1"
tower = "0.4"

[build-dependencies]
tonic-build = "0.11"
